--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             font-family: 'Bebas Neue', cursive;
             cursor: pointer;
             transition: 0.3s;
+            border-radius: 100px;
         }
 
         button:hover {
